--- a/core-bundle/src/Resources/contao/languages/fa/modules.xlf
+++ b/core-bundle/src/Resources/contao/languages/fa/modules.xlf
@@ -31,7 +31,7 @@
       </trans-unit>
       <trans-unit id="MOD.themes.1">
         <source>Manage front end modules, style sheets, page layouts and templates</source>
-        <target>مدیریت ماژول‌های، شیوه‌نامه‌ها، چیدمان صفحات و قالب‌های وب‌سایت</target>
+        <target>مدیریت ماژول‌های، شیوه‌نامه‌ها، چیدمان صفحه‌ها و قالب‌های وب‌سایت</target>
       </trans-unit>
       <trans-unit id="MOD.page.0">
         <source>Site structure</source>
@@ -119,7 +119,7 @@
       </trans-unit>
       <trans-unit id="MOD.maintenance.1">
         <source>Maintain or update Contao</source>
-        <target>نگهداشت یا بروزرسانی کانتائو</target>
+        <target>نگهداشت یا روزآمدسازی کانتائو</target>
       </trans-unit>
       <trans-unit id="MOD.undo.0">
         <source>Restore</source>
@@ -231,7 +231,7 @@
       </trans-unit>
       <trans-unit id="FMD.sitemap.1">
         <source>Generates a list of all pages in the site structure</source>
-        <target>لیستی از تمامی صفحات در ساختار سایت را ایجاد می‌کند</target>
+        <target>لیستی از تمامی صفحه‌ها در ساختار سایت را ایجاد می‌کند</target>
       </trans-unit>
       <trans-unit id="FMD.user">
         <source>User</source>
@@ -307,7 +307,7 @@
       </trans-unit>
       <trans-unit id="FMD.articleList.0">
         <source>Article list</source>
-        <target>لیست نوشته</target>
+        <target>فهرست نوشته</target>
       </trans-unit>
       <trans-unit id="FMD.articleList.1">
         <source>Generates a list of articles of a column</source>
