--- a/core-bundle/src/Resources/contao/languages/fa/tl_form.xlf
+++ b/core-bundle/src/Resources/contao/languages/fa/tl_form.xlf
@@ -7,7 +7,7 @@
       </trans-unit>
       <trans-unit id="tl_form.title.1">
         <source>Please enter the form title.</source>
-        <target>لطفاً عنوان فرم را وارد نمائید.</target>
+        <target>لطفا عنوان فرم را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_form.alias.0">
         <source>Form alias</source>
@@ -23,23 +23,23 @@
       </trans-unit>
       <trans-unit id="tl_form.jumpTo.1">
         <source>Please choose the page to which visitors will be redirected after submitting the form.</source>
-        <target>لطفاً صفحه‌ای را که کاربران بعد از ارسال فرم باید بازگردانی شوند را انتخاب کنید.</target>
+        <target>لطفا صفحه‌ای را که کاربران بعد از ارسال فرم باید بازگردانی شوند را انتخاب کنید.</target>
       </trans-unit>
       <trans-unit id="tl_form.sendViaEmail.0">
         <source>Send form data via e-mail</source>
-        <target>ارسال داده‌ها توسط پست الکترونیک</target>
+        <target>ارسال داده‌ها توسط ایمیل</target>
       </trans-unit>
       <trans-unit id="tl_form.sendViaEmail.1">
         <source>Send the submitted data to an e-mail address.</source>
-        <target>داده‌های ارسال شده توسط به آدرس ایمیل فرستاده خواهند شد.</target>
+        <target>داده‌های ارسال شده توسط به نشانی ایمیل فرستاده خواهند شد.</target>
       </trans-unit>
       <trans-unit id="tl_form.recipient.0">
         <source>Recipient address</source>
-        <target>آدرس گیرنده</target>
+        <target>نشانی گیرنده</target>
       </trans-unit>
       <trans-unit id="tl_form.recipient.1">
         <source>Separate multiple e-mail addresses with comma.</source>
-        <target>آدرس‌های ایمیل چندتایی را با کاما از هم جدا کنید.</target>
+        <target>نشانی‌های ایمیل چندتایی را با کاما از هم جدا کنید.</target>
       </trans-unit>
       <trans-unit id="tl_form.subject.0">
         <source>Subject</source>
@@ -47,7 +47,7 @@
       </trans-unit>
       <trans-unit id="tl_form.subject.1">
         <source>Please enter the e-mail subject.</source>
-        <target>عنوان ایمیل را وارد نمائید.</target>
+        <target>لطفا موضوع ایمیل را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_form.format.0">
         <source>Data format</source>
@@ -67,23 +67,23 @@
       </trans-unit>
       <trans-unit id="tl_form.xml.0">
         <source>XML file</source>
-        <target>فایل XML</target>
+        <target>پرونده XML</target>
       </trans-unit>
       <trans-unit id="tl_form.xml.1">
         <source>The form data will be attached to the e-mail as an XML file.</source>
-        <target>داده‌های فرم به صورت فایل XML به ایمیل پیوست خواهد شد.</target>
+        <target>داده‌های فرم به صورت پرونده XML به ایمیل پیوست خواهد شد.</target>
       </trans-unit>
       <trans-unit id="tl_form.csv.0">
         <source>CSV file</source>
-        <target>فایل CSV</target>
+        <target>پرونده CSV</target>
       </trans-unit>
       <trans-unit id="tl_form.csv.1">
         <source>The form data will be attached to the e-mail as a CSV file.</source>
-        <target>داده‌های فرم به صورت فایل CSV به ایمیل پیوست خواهد شد.</target>
+        <target>داده‌های فرم به صورت پرونده CSV به ایمیل پیوست خواهد شد.</target>
       </trans-unit>
       <trans-unit id="tl_form.email.0">
         <source>E-mail</source>
-        <target>پست الکترونیک</target>
+        <target>ایمیل</target>
       </trans-unit>
       <trans-unit id="tl_form.email.1">
         <source>Ignores all fields except &lt;em&gt;name&lt;/em&gt;, &lt;em&gt;email&lt;/em&gt;, &lt;em&gt;subject&lt;/em&gt;, &lt;em&gt;message&lt;/em&gt; and &lt;em&gt;cc&lt;/em&gt; (carbon copy) and sends the form data like it had been sent from a mail client. File uploads are allowed.</source>
@@ -131,11 +131,11 @@
       </trans-unit>
       <trans-unit id="tl_form.attributes.0">
         <source>CSS ID/class</source>
-        <target>CSS کلاس/شناسه</target>
+        <target>شناسه/کلاس سی‌اس‌اس</target>
       </trans-unit>
       <trans-unit id="tl_form.attributes.1">
         <source>Here you can set an ID and one or more classes.</source>
-        <target>می‌توانید یک ID و یک یا چند class انتخاب نمائید.</target>
+        <target>می‌توانید یک شناسه و یک یا چند کلاس انتخاب نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_form.formID.0">
         <source>Form ID</source>
@@ -155,11 +155,11 @@
       </trans-unit>
       <trans-unit id="tl_form.allowTags.0">
         <source>Allow HTML tags</source>
-        <target>تگ‌های HTML مجاز</target>
+        <target>تگ‌های اچ‌تی‌ام‌ال مجاز</target>
       </trans-unit>
       <trans-unit id="tl_form.allowTags.1">
         <source>Allow HTML tags in form fields.</source>
-        <target>تگ‌های HTML مجار در فیلد‌های فرم.</target>
+        <target>تگ‌های اچ‌تی‌ام‌ال مجار در فیلد‌های فرم.</target>
       </trans-unit>
       <trans-unit id="tl_form.tstamp.0">
         <source>Revision date</source>
