--- a/core-bundle/src/Resources/contao/languages/ja/tl_page.xlf
+++ b/core-bundle/src/Resources/contao/languages/ja/tl_page.xlf
@@ -67,7 +67,7 @@
       </trans-unit>
       <trans-unit id="tl_page.jumpTo.0">
         <source>Redirect page</source>
-        <target>リダイレクトページ</target>
+        <target>リダイレクト先のページ</target>
       </trans-unit>
       <trans-unit id="tl_page.jumpTo.1">
         <source>Please choose the page to which visitors will be redirected. Leave blank to redirect to the first regular subpage.</source>
